# app/validations/user.validation.ts
@@ -5,7 +5,14 @@ export const userCreateSchema = Joi.object({
     firstName : schema.firstName,
     lastName : schema.lastName,
     email : schema.email,
+    phoneNumber : schema.phoneNumber,
+    region : schema.region,
     password : schema.password,
+})
+export const userUpdateSchema = Joi.object({
+    firstName : schema.firstName,
+    lastName : schema.lastName,
+    email : schema.email,
 })
 
 export const loginSchema = Joi.object({
@@ -21,5 +28,9 @@ export const forgotSchema = Joi.object({
 export const changePasswordSchema = Joi.object({
     email : schema.email,
     oldPassword : schema.password,
+    newPassword : schema.password
+})
+export const changForgotePasswordSchema = Joi.object({
+    email : schema.email,
     newPassword : schema.password
 })
